kubernetes/kube-filebeat-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: "kube-filebeat"
  labels:
    k8s-app: filebeat
  annotations:
    description: "automated log shipper powered by annotations"
spec:
  template:
    metadata:
      name: filebeat
      labels:
        component: filebeat
        app: filebeat
    spec:
      serviceAccountName: jenkins
      serviceAccount: jenkins
      containers:
        -
          name: "kube-filebeat"
          imagePullPolicy: Always
          image: "einyx/annotation-beat:latest"
          volumeMounts:
            - name: docker
              mountPath: /var/lib/docker
          imagePullPolicy: "Always"
      restartPolicy: "Always"
      volumes:
        - name: docker
          hostPath:
            path: /var/lib/docker
